@@ -35,8 +35,8 @@ add_library(hubbub SHARED
 	src/utils/string.c
 )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -Wundef -Wpointer-arith -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -D_BSD_SOURCE -D_DEFAULT_SOURCE -I${CMAKE_SOURCE_DIR}/contrib/libhubbub/include -I${CMAKE_SOURCE_DIR}/contrib/libhubbub/src -std=c99 -I${CMAKE_SOURCE_DIR}/contrib/libparserutils/include -Werror -pedantic -Wno-missing-prototypes -Wno-unused-function -I${CMAKE_BINARY_DIR}/contrib/libhubbub/src -DNDEBUG")
-
 target_link_libraries(hubbub parserutils)
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${CMAKE_SOURCE_DIR}/contrib/libhubbub/src")
 
 install(TARGETS hubbub DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
